UserId problem on reload #47951

Closed
opened 2016-03-26 13:26:54 +01:00 by Thomas Beck · 4 comments
Member

Hi Bastien,

as discussed in irc:

First file shows you the desired effect: A focus empty is used on the camera properties to set a focal point FocusEmpty_Before.blend

Now I save the file and reload it ... after that I delete the empty - but it's still assigned in the focal property (should have been deleted as there is no user anymore) FocusEmpty_After.blend I can't find it in the outliner neither...

On a side note, there is still a similar problem with Empties when you enable the groups duplication feature. When you stumble across it then don't wonder... I'll create a new report when I can reproduce it.

Thanks Thomas

Hi Bastien, as discussed in irc: First file shows you the desired effect: A focus empty is used on the camera properties to set a focal point [FocusEmpty_Before.blend](https://archive.blender.org/developer/F298338/FocusEmpty_Before.blend) Now I save the file and reload it ... after that I delete the empty - but it's still assigned in the focal property (should have been deleted as there is no user anymore) [FocusEmpty_After.blend](https://archive.blender.org/developer/F298339/FocusEmpty_After.blend) I can't find it in the outliner neither... On a side note, there is still a similar problem with Empties when you enable the groups duplication feature. When you stumble across it then don't wonder... I'll create a new report when I can reproduce it. Thanks Thomas
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Bastien Montagne was assigned by Thomas Beck 2016-03-26 13:26:54 +01:00
Author
Member

Added subscriber: @plasmasolutions

Added subscriber: @plasmasolutions

This issue was referenced by 112f431c3b

This issue was referenced by 112f431c3b71576a3a6dbd875340dc74e57502d0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47951
No description provided.